New Benchmarks README.md
Added description from new Testings.